...
    <string name="browsing_history_date_yesterday">Yesterday</string>
    <string name="browsing_history_menu_delete">Delete</string>
    <string name="browsing_history_dialog_confirm_clear_message">Clear all browsing history?</string>
    <string name="browsing_history_dialog_btn_clear">Clear</string>

    <!-- Remove the item from Download file panel -->
    <string name="remove_from_list">Remove from list</string>

    <!-- Remove the item from Download file panel and delete the file -->
    <string name="delete_file">Delete file</string>

    <!-- Long Screenshot -->
    <!-- Message that is shown for a few seconds after a successful screenshot capture. -->
...
    <string name="themetoy_onboarding_title">Color your life!</string>

    <!-- This is the description of Themeing on-boarding dialog -->
    <string name="themetoy_onboarding_description">Double click on the home background to switch themes.</string>

    <!-- Message shown for a few seconds after a bookmark is saved. -->
    <string name="bookmark_saved">Bookmark saved</string>
    <!-- Message shown for a few seconds after a bookmark is removed. -->
    <string name="bookmark_removed">Bookmark removed</string>
    <!-- An action that is shown along with bookmark_saved to give user an option to edit the saved bookmark. -->
    <string name="bookmark_saved_edit">EDIT</string>
    <!-- Title of the bookmark editing page -->
    <string name="title_activity_edit_bookmark">Edit bookmark</string>
    <!-- The only action available in bookmark editing page. Press this label to save the edited bookmark. -->
    <string name="bookmark_edit_save">SAVE</string>
    <!-- The label of the textbox where user can type the name of the bookmark -->
    <string name="bookmark_edit_name">Name</string>
    <!-- The label of the textbox where user can type the url of the bookmark -->
    <string name="bookmark_edit_location">Location</string>
    <!-- Message shown for a few seconds after bookmark edit is saved. -->
    <string name="bookmark_edit_success">Bookmark updated</string>
    <!-- Message shown in Bookmarks panel when the bookmark list is empty. -->
    <string name="bookmarks_empty_view_msg">No bookmarks</string>
    <!-- Label for editing a bookmark which is available next to the bookmark item. -->
    <string name="edit_bookmark">Edit</string>

    <!-- Content portal -->
    <!-- Title of news portal page -->
    <string name="label_menu_news">News</string>
    <string name="label_menu_latest_top_trending_news">Latest &amp; Top Trending News</string>
    <!-- Button on the news portal page when a newer list is found. When a user tap it, the page will refresh and show the latest list. -->
...
