<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paletteWhite100"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.mozilla.focus.activity.EditBookmarkActivity"
    tools:showIn="@layout/activity_edit_bookmark">

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/NewEditTextBackgroundStyle">

        <EditText
            android:id="@+id/bookmark_name"
            style="@style/NewEditTextInputStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/bookmark_name_label"
            style="@style/NewEditTextLabelStyle"
            android:text="@string/bookmark_edit_name"
            app:layout_constraintBottom_toTopOf="@+id/bookmark_name"
            app:layout_constraintLeft_toLeftOf="@+id/bookmark_name"
            app:layout_constraintTop_toTopOf="@+id/bookmark_name" />

        <ImageButton
            android:id="@+id/bookmark_name_clear"
            style="@style/NewEditTextClearStyle"
            app:layout_constraintBottom_toBottomOf="@+id/bookmark_name"
            app:layout_constraintEnd_toEndOf="@+id/bookmark_name"
            app:layout_constraintTop_toTopOf="@+id/bookmark_name"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/NewEditTextBackgroundStyle">

        <EditText
            android:id="@+id/bookmark_location"
            android:inputType="textUri"
            style="@style/NewEditTextInputStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/bookmark_location_label"
            style="@style/NewEditTextLabelStyle"
            android:text="@string/bookmark_edit_location"
            app:layout_constraintBottom_toTopOf="@+id/bookmark_location"
            app:layout_constraintLeft_toLeftOf="@+id/bookmark_location"
            app:layout_constraintTop_toTopOf="@+id/bookmark_location" />

        <ImageButton
            android:id="@+id/bookmark_location_clear"
            style="@style/NewEditTextClearStyle"
            app:layout_constraintBottom_toBottomOf="@+id/bookmark_location"
            app:layout_constraintEnd_toEndOf="@+id/bookmark_location"
            app:layout_constraintTop_toTopOf="@+id/bookmark_location"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
